plugins {
  id 'groovy'
  id 'idea'
  id 'jacoco'

  id 'maven'
  id 'signing'
  id 'com.gradle.plugin-publish' version '0.9.1'
}

description = 'Gradle plugin to find duplicate code using PMDs copy/paste detection (= CPD)'
group = 'de.aaschmid'
version = '1.0'

ext {
    isBuildOnJenkins = System.getenv('BUILD_TAG')?.startsWith('jenkins-') ?: false
}

sourceCompatibility = '1.6'

repositories {
    mavenCentral()
}

configurations {
    provided
}

sourceSets {
    main {
        compileClasspath += configurations.provided
        runtimeClasspath += configurations.provided
    }
    test {
        compileClasspath += configurations.provided
        runtimeClasspath += configurations.provided
    }
    integTest {
        compileClasspath += configurations.provided + main.output + test.output
        runtimeClasspath += configurations.provided + main.output + test.output
    }
}

configurations {
    integTestCompile.extendsFrom testCompile
    integTestRuntime.extendsFrom testRuntime
}

dependencies {
    provided gradleApi()
    provided localGroovy()

    provided 'javax.inject:javax.inject:1'
    provided 'net.sourceforge.pmd:pmd-dist:5.4.2'

    testCompile('org.spockframework:spock-core:0.7-groovy-2.0') {
        exclude group: 'org.codehaus.groovy'
    }

    integTestCompile 'org.hamcrest:hamcrest-core:1.3'
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.14'
}

javadoc {
    classpath += configurations.provided
}

jar {
    manifest {
        attributes (
            'Built-By': "Gradle ${gradle.gradleVersion}",
            'Built-Date': new Date(),
            'Specification-Title': 'gradle-cpd-plugin',
            'Specification-Version': version,
            'Specification-Vendor': 'Andreas Schmid, service@aaschmid.de',
            'Implementation-Title': 'gradle-cpd-plugin',
            'Implementation-Version': version,
            'Implementation-Vendor': 'Andreas Schmid, service@aaschmid.de',
        )
    }
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

test {
    ignoreFailures = isBuildOnJenkins

    testLogging {
        exceptionFormat "full"
    }
}

jacoco {
    toolVersion = '0.7.2.201409121644'
}

artifacts {
    archives jar
    archives javadocJar
    archives sourcesJar
}

idea {
    module {
        scopes.PROVIDED.plus += [ configurations.provided ]

        scopes.TEST.plus.add(configurations.integTestCompile)
        scopes.TEST.plus.add(configurations.integTestRuntime)

        testSourceDirs += sourceSets.integTest.groovy.srcDirs
        testSourceDirs += sourceSets.integTest.resources.srcDirs
    }
}

task integTest(type: Test) {
    inputs.file jar.archivePath

    dependsOn ':jar'
    shouldRunAfter 'test'

    testClassesDir = sourceSets.integTest.output.classesDir
    testSrcDirs = sourceSets.integTest.java.srcDirs as List

    classpath = sourceSets.integTest.runtimeClasspath
    //jvmArgs '-Xmx512m', '-XX:MaxPermSize=256m', '-XX:+HeapDumpOnOutOfMemoryError'

    reports.junitXml.destination = file("${project.buildDir}/integTest-results")
    reports.html.destination = file("${project.reportsDir}/${name}")

    // System properties
    systemProperty 'integTest.cpdPluginJar', jar.archivePath
    systemProperty 'integTest.gradleHomeDir', gradle.gradleHomeDir
    systemProperty 'integTest.gradleUserHomeDir', rootProject.file("${rootProject.buildDir}/${name}WorkDir")
}
check.dependsOn(integTest)

// -- build and publish artifacts -------------------------------------------------------------------------------------

signing {
    // requires gradle.properties, see http://www.gradle.org/docs/current/userguide/signing_plugin.html
    required {
        gradle.taskGraph.hasTask('uploadArchives')
    }
    sign configurations.archives
}

if (!hasProperty('sonatypeUsername')) {
	ext.sonatypeUsername = ''
}
if (!hasProperty('sonatypePassword')) {
	ext.sonatypePassword = ''
}

uploadArchives {
    repositories {
        mavenDeployer {
            beforeDeployment { deployment ->
                signing.signPom(deployment)
            }
            repository(url: 'https://oss.sonatype.org/service/local/staging/deploy/maven2/') {
                // username and password from gradle.properties
                authentication(userName: sonatypeUsername, password: sonatypePassword )
            }
            snapshotRepository(url: 'https://oss.sonatype.org/content/repositories/snapshots/') {
                authentication(userName: sonatypeUsername, password: sonatypePassword )
            }

            pom {
                project {
                    name 'gradle-cpd-plugin'
                    packaging 'jar'
                    description project.description
                    url 'https://github.com/aaschmid/gradle-cpd-plugin'

                    scm {
                        url 'scm:git@github.com:aaschmid/gradle-cpd-plugin.git'
                        connection 'scm:git@github.com:aaschmid/gradle-cpd-plugin.git'
                        developerConnection 'scm:git@github.com:aaschmid/gradle-cpd-plugin.git'
                    }

                    licenses {
                        license {
                            name 'The Apache Software License, Version 2.0'
                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                            distribution 'repo'
                        }
                    }

                    developers {
                        developer {
                            id 'aaschmid'
                            name 'Andreas Schmid'
                        }
                    }
                }
                whenConfigured { pom ->
                    pom.dependencies.removeAll(pom.dependencies.findAll{ dep -> dep.scope in [ 'compile', 'test' ] })
                }
            }
        }
    }
}

// Note: The plugin has to be uploaded to Maven Central first
pluginBundle {
    website = 'https://github.com/aaschmid/gradle-cpd-plugin'
    vcsUrl = 'https://github.com/aaschmid/gradle-cpd-plugin'

    description = 'A Gradle plugin to find duplicate code using PMDs copy/paste detection (= CPD).'
    tags = [ 'duplicates', 'cpd', 'copy-paste-detection' ]

    plugins {
        cpdPlugin {
            id = 'de.aaschmid.cpd'
            displayName = 'Gradle CPD plugin'
        }
    }

    mavenCoordinates {
        groupId = project.group
        artifactId = 'gradle-cpd-plugin'
    }
}
